Fix broken CSS styling

--- a/data/styling.css
+++ b/data/styling.css
@@ -1,4 +1,4 @@
-.brisk-menu .apps-list row, .brisk-menu .apps-list .row,  {
+.brisk-menu .apps-list row, .brisk-menu .apps-list .row  {
     background-color: transparent;
     background-image: none;
 }
